Created update user api and change pass api
